--- a/pawls.html
+++ b/pawls.html
@@ -146,7 +146,9 @@
 	<div class="row">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 				<p class="mont">A dog's behavioral issue is the number one reason why dogs are given up to shelters</p><br><br>
-			</div>
+			<p>
+Barking, whining, and other maladaptive noise-related behavior were among the most common issues experienced by newly adoptive pet owners.<br><br></p></div>
+
 		</div>
 <div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp">
@@ -181,8 +183,229 @@
 										<br><img src="images/pawlsinfo.png" class="img-responsive center" style="max-width:100%">
 								</div>
 							</div>
-
 				</section>
+
+
+				<section id="section">
+						<div class="container">
+							<div class="content">
+							<div class="row">
+								<div class="col-lg-12 col-md-12 col-sm-12">
+									<h3>PROCESS</h3>
+
+									<p class="mont">Research to product
+
+				</div>
+				</div>
+				<br><br>
+				<div class="row">
+					<div class="col-lg-12 col-md-12 col-sm-12">
+				<img src="images/pawlsprocess.png" class="img-responsive center" style="max-width:100%">
+				</div>
+				</div>
+				</section>
+
+
+				<section id="graybg">
+						<div class="container">
+							<div class="content">
+							<div class="row">
+								<div class="col-lg-12 col-md-12 col-sm-12">
+									<h3>DIARY STUDY</h3>
+
+									<p class="mont">How do dog owners address disruptive barking?
+
+				</div>
+				</div>
+				<br><br>
+				<div class="row">
+					<div class="col-lg-12 col-md-12 col-sm-12">
+
+				<p>Participants were tasked with keeping a behavioral log of every instance of their dog experiencing any distress, when and where it occurred, what triggered the dog’s response, how serious the dog’s response was, and what the owner’s did about the dog’s distress. Our most significant findings are below.
+</p><br><br>
+				<img src="images/pawlsdiarystudy.png" class="img-responsive center" style="max-width:100%">
+				</div>
+				</div>
+				</section>
+
+				<section id="section">
+						<div class="container">
+							<div class="content">
+							<div class="row">
+								<div class="col-lg-12 col-md-12 col-sm-12">
+									<h3>IDEATION</h3>
+
+									<p class="mont">A “smart-playpen” that influences the five senses
+
+				</div>
+				</div>
+				<br><br>
+				<div class="row">
+					<div class="col-lg-12 col-md-12 col-sm-12">
+						<p> When the “smart-playpen” senses a dog barking incessantly:<br>
+							<li>Dog’s view will be blocked off by automatically drawn curtains around the playpen walls
+								<li>Pheromones will be released (known to calm dogs)
+									<li>Noise will play from speakers to mask the stimulus
+										<li> A snack will be automatically distributed once the dog stops barking
+											<li>The dog bed will warm up or cool down if it senses an abnormal body temperature
+											</p><br><br>
+				<img src="images/guardian.jpg" class="img-responsive center" style="max-width:80%">
+
+					</div>
+
+				</div>
+				</div>
+				</section>
+
+				<section id="graybg">
+						<div class="container">
+							<div class="content">
+							<div class="row">
+								<div class="col-lg-12 col-md-12 col-sm-12">
+									<h3>USER ENACTMENTS</h3>
+
+									<p class="mont">What do users think about PAWLS, the smart dog crate?
+				</div>
+				</div>
+				<br><br>
+
+
+				<div class="row">
+					<div class="col-lg-6 col-md-6 col-sm-6">
+				<img src="images/userenact.jpeg" class="img-responsive center" style="max-width:75%"><br>
+			</div>
+			<div class="col-lg-6 col-md-6 col-sm-6">
+
+				<img src="images/userenact2.jpeg" class="img-responsive center" style="max-width:75%">
+			</div>
+
+				</div>
+
+				<br><br>
+
+				<div class="row">
+					<div class="col-lg-12 col-md-12 col-sm-12">
+
+				<img src="images/pawlsuserenactments.png" class="img-responsive center" style="max-width:100%">
+
+				</div></div>
+
+				</div>
+				</section>
+
+				<section id="section">
+						<div class="container">
+							<div class="content">
+							<div class="row">
+								<div class="col-lg-12 col-md-12 col-sm-12">
+									<h3>STORYBOARD + DESIGN CONCEPTION</h3>
+
+									<p class="mont">Product needs to be educational, encourage agency, be data-driven, & adaptive
+
+				</div>
+				</div>
+				<br><br>
+				<div class="row">
+					<div class="col-lg-12 col-md-12 col-sm-12">
+						<p>
+					<span style="font-weight: 600">Educational and encourages agency</span><br>
+System should empower the user to make decisions that affect their companion and the training process rather than making decisions for them.   <br><br>
+					<span style="font-weight: 600">Data-Driven:</span><br> Recommendations, tips, notifications, and other features in the system should be made based on data collected by PAWLS or from reliable outside sources.<br><br>
+						<span style="font-weight: 600">Adaptive: </span><br>The system should adjust training as dog does or doesn't show improvement</p><br><br>
+
+</div>
+					<div class="col-lg-12 col-md-12 col-sm-12">
+				<img src="images/pawlsstoryboard.jpg" class="img-responsive center" style="max-width:75%">
+			</div>
+
+	</div>
+
+					</div>
+				</div>
+				</div>
+				</section>
+
+				<section id="solutiongray">
+					<div class="container">
+							<div class="content">
+					<div class="row">
+						<div class="col-lg-12 col-md-12 col-sm-12">
+							<h3>FINAL SYSTEM PROPSAL</h3>
+						</div>
+					</div>
+					<div class="row">
+							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+								<p class="mont">Arduino technology for hardware & software
+</p><br><br>
+							</div>
+									</div>
+
+						</section>
+
+						<section style="background-color: #f9f9f9; padding-bottom: 130px;">
+							<div class="container">
+												<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp text-center" data-wow-delay=".2s">
+														<br><br>				<img src="images/pawlsarduino.png" class="img-responsive center" style="max-width:100%">
+<br>
+												</div>
+											</div>
+								</section>
+
+
+								<section id="solutionwhite">
+										<div class="container">
+											<div class="content">
+											<div class="row">
+												<div class="col-lg-12 col-md-12 col-sm-12">
+													<h3>SOLUTION</h3>
+
+													<p class="mont">A smart crate system paired with a mobile app
+
+								</div>
+								</div>
+								<br><br>
+								<div class="row">
+									<div class="col-lg-12 col-md-12 col-sm-12">
+								<img src="images/pawlsfeatures.png" class="img-responsive center" style="max-width:100%">
+								</div>
+								</div><br><br><br><br>
+								</section>
+
+										<section style="background-color: #EDEBAB; padding-bottom: 130px;"><br><br><br><br>
+													<div class="row">
+																<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp text-center" data-wow-delay=".2s">
+																		<br><img src="images/pawlsinfo.png" class="img-responsive center" style="max-width:100%">
+																</div>
+															</div>
+												</section>
+
+
+												<section id="section">
+														<div class="container">
+															<div class="content">
+																<div class="row">
+	 													 		 <div class="col-md-12 col-sm-12">
+	 													 			 <h3>REFLECTION</h3>
+	 													 			 <p class="mont">What I learned</p>
+	 													 			 </div>
+	 													 		 </div>
+	 													 		 <br>
+	 													 			 <div class="row">
+	 													 				<div class="col-lg-12 col-md-12 col-sm-12">
+	 													 				<p>
+	 													 				Brainstorming is a collaborative process and because the process involves the collective sharing and mixing of ideas, indivuduals must be prepared to give up ownership of "their" ideas.
+	 													 			 <br><br>
+																	 Design is political. After the final demo, I realized there is high potential for this product to not be available to lower income families. This product will only be consumed by a people from a specific income bracket.
+																	 <br><br>Design needs to be based on needs made evident through discussion with those the design affects.<br><br><br><br>
+
+	 													 				<p class="mont">Where to improve</p>
+	 													 				<p><br>
+	 													 				Practice prototyping with Framer and After effects to practice motion design.</p>
+
+
+	 													 		</div>
+	 													 	</div>
+	 													 </section>
 
 
 <!-- JAVASCRIPT JS FILES -->
