--- a/lexmark.html
+++ b/lexmark.html
@@ -11,10 +11,8 @@
 	  gtag('config', 'UA-144593656-1');
 	</script>
 
-
 	<!-- SITE TITLE -->
 	<title>Lexmark</title>
-
 
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -38,10 +36,10 @@
 <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
 
+
 </head>
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 
-	<!-- navigation section -->
 	<section id= "navbar" class="navbar navbar-fixed-top custom-navbar" role="navigation">
 		<div class="container">
 			<div class="navbar-header">
@@ -54,8 +52,8 @@
 			</div>
 			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="index.html#work">work</a></li>
-					<li><a href="index.html#about">about</a></li>
+					<li><a href="index.html#work">Work</a></li>
+					<li><a href="index.html#about">About</a></li>
 					<!-- <li><a href="#resume" class="smoothScroll">RESUME</a></li> -->
 				</ul>
 			</div>
