--- a/pawls.html
+++ b/pawls.html
@@ -26,13 +26,20 @@
 	<link rel="stylesheet" href="css/nivo-lightbox.css">
 	<link rel="stylesheet" href="css/nivo_themes/default/default.css">
 	<link rel="stylesheet" href="css/style.css">
-	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-	<link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Amiko&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+<link href="https://fonts.googleapis.com/css?family=Gelasio&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Lato|Montserrat:400,700|Playfair+Display|Rubik&display=swap" rel="stylesheet">
+<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+<link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+
 
 </head>
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 
-	<!-- navigation section -->
 	<section id= "navbar" class="navbar navbar-fixed-top custom-navbar" role="navigation">
 		<div class="container">
 			<div class="navbar-header">
@@ -45,8 +52,8 @@
 			</div>
 			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="index.html#work">work</a></li>
-					<li><a href="index.html#about">about</a></li>
+					<li><a href="index.html#work">Work</a></li>
+					<li><a href="index.html#about">About</a></li>
 					<!-- <li><a href="#resume" class="smoothScroll">RESUME</a></li> -->
 				</ul>
 			</div>
@@ -64,7 +71,7 @@
 				<div class="content">
 		<div class="row">
 			<div class="col-md-12 col-sm-12 text-center">
-				<p class="title">Helping Owners and Their Dogs Stay Together</p><br>
+				<p class="title bold">Helping Owners and Their Dogs Stay Together</p><br>
 				<h4 class="normal" style="font-family: 'Quicksand', sans-serif;">Product Design - Mobile + Pervasive Computing</h4>
 				<h4 class="normal" style="font-family: 'Quicksand', sans-serif;"> Sept - Dec 2019 </h4>
 			</div>
