--- a/vegout.html
+++ b/vegout.html
@@ -52,8 +52,8 @@
 			</div>
 			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="index.html#work">work</a></li>
-					<li><a href="index.html#about">about</a></li>
+					<li><a href="index.html#work">Work</a></li>
+					<li><a href="index.html#about">About</a></li>
 					<!-- <li><a href="#resume" class="smoothScroll">RESUME</a></li> -->
 				</ul>
 			</div>
