--- a/pawls.html
+++ b/pawls.html
@@ -228,7 +228,7 @@ Barking, whining, and other maladaptive noise-related behavior were among the mo
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12">
 
-				<p>Participants were tasked with keeping a behavioral log of every instance of their dog experiencing any distress, when and where it occurred, what triggered the dog’s response, how serious the dog’s response was, and what the owner’s did about the dog’s distress. Our most significant findings are below.
+				<p>4 participants were tasked with keeping a behavioral log of every instance of their dog experiencing any distress, when and where it occurred, what triggered the dog’s response, how serious the dog’s response was, and what the owner’s did about the dog’s distress. Our most significant findings are below.
 </p><br><br>
 				<img src="images/pawlsdiarystudy.png" class="img-responsive center" style="max-width:100%">
 				</div>
@@ -317,8 +317,8 @@ Barking, whining, and other maladaptive noise-related behavior were among the mo
 						<p>
 					<span style="font-weight: 600">Educational and encourages agency</span><br>
 System should empower the user to make decisions that affect their companion and the training process rather than making decisions for them.   <br><br>
-					<span style="font-weight: 600">Data-Driven:</span><br> Recommendations, tips, notifications, and other features in the system should be made based on data collected by PAWLS or from reliable outside sources.<br><br>
-						<span style="font-weight: 600">Adaptive: </span><br>The system should adjust training as dog does or doesn't show improvement</p><br><br>
+					<span style="font-weight: 600">Data-Driven</span><br> Recommendations, tips, notifications, and other features in the system should be made based on data collected by PAWLS or from reliable outside sources.<br><br>
+						<span style="font-weight: 600">Adaptive</span><br>The system should adjust training as dog does or doesn't show improvement</p><br><br>
 
 </div>
 					<div class="col-lg-12 col-md-12 col-sm-12">
